--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	                <span class="number" data-number="5">0</span>
 	                <span>Projects completed</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="./images/RxResume.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
